--- a/FoodDrive/package.json
+++ b/FoodDrive/package.json
@@ -1,7 +1,6 @@
 {
   "name": "fooddrive",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,12 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "sequelize": "^6.9.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "sequelize-cli": "^6.3.0"
-  }
+  },
+  "description": ""
 }
