--- a/FoodDrive/package.json
+++ b/FoodDrive/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "pg": "^8.7.1",
     "sequelize": "^6.9.0"
   },
